[tool.poetry]
name = "hue"
version = "0.1.0"
description = ""
authors = ["Lukas <lukasindre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
black = "^23.1.0"
mypy = "^1.0.1"
types-requests = "^2.28.11.13"
types-urllib3 = "^1.26.25.6"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "hue.main:main"
initialize = "hue.initialize:main"

[tool.mypy]
disable_error_code = ["no-redef", "attr-defined", "str-bytes-safe"]